[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Other/Helicopter02.png" type="Texture" id=1]
[ext_resource path="res://World/Other/Helicopter.png" type="Texture" id=2]
[ext_resource path="res://World/Resources/Helicopter.gd" type="Script" id=3]
[ext_resource path="res://World/Other/helicopter-hovering-01.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.875
height = 12.7207

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 57.631 )

[node name="Helicopter" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.75, -3.125 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Position2D"]
frames = SubResource( 2 )
animation = "Animate"

[node name="RayCast2D" type="RayCast2D" parent="Position2D"]
position = Vector2( 10, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
